chpt 2 - module details

--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -8,7 +8,7 @@
 \end{raggedleft}
 
 
-AAT - Anglo-Australian Telescope
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % If you have more than one page in your acknowledgements, include the
@@ -21,10 +21,12 @@ AAT - Anglo-Australian Telescope
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
+AAT - Anglo-Australian Telescope
 
 CTIO - Cerro Tololo Inter-American Observatory
 
 HST - Hubble Space Telescope
+
+SED - Spectral Energy Distribution
 
 VLT - Very Large Telescope
