--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -23,6 +23,8 @@
 
 AAT - Anglo-Australian Telescope
 
+API - Application Program Interface
+
 CTIO - Cerro Tololo Inter-American Observatory
 
 HST - Hubble Space Telescope
