nearly finished ch2.  Updated tables to look pretty.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -47,8 +47,8 @@
 % Load in the epsf packages
 \usepackage{enumerate}
 
-% Load in subfigure package
-\usepackage{subfigure} 
+% Load in subcaption package
+\usepackage{subcaption} 
 
 % Load in the epsf packages
 \usepackage{epsf}
@@ -107,6 +107,10 @@
 
 % Load in the caption
 \usepackage{caption}
+
+%ANTONIA PACKAGES
+\usepackage{booktabs}
+
 
 % Load in the hacked caption stuff
 \usepackage{hackcaption}
