--- a/thesis/defs.tex
+++ b/thesis/defs.tex
@@ -1,3 +1,9 @@
+%additional commands
+\newcommand{\micron}{$\mu$m}
+\newcommand{\halpha}{H$\alpha$}
+\newcommand{\oilong}{[O~{\sc i}]~6300,6363~\AA}
+\newcommand{\oishort}{[O~{\sc i}]}
+
 % Commands to do the journal names for bibtex
 
 \newcommand{\mnras}{MNRAS}
