--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -29,6 +29,14 @@ CTIO - Cerro Tololo Inter-American Observatory
 
 HST - Hubble Space Telescope
 
+(M/N)IR - (Mid/Near) Infra-Red 
+
+ISM - Inter-Stellar Medium
+
 SED - Spectral Energy Distribution
+
+(CC)SN(e) - (Core-Collapse) Supernova(e)
+
+UV - Ultra-Violet
 
 VLT - Very Large Telescope
