--- a/thesis/front/frontquote.tex
+++ b/thesis/front/frontquote.tex
@@ -2,12 +2,29 @@
 \vspace*{\fill}
 
 \begin{flushright}
-\large {\em QUOTE GOES HERE }\\
+\large {\em Gather out of star-dust 
+
+Earth-dust,
+
+Cloud-dust,
+
+Storm-dust,
+
+And splinters of hail,
+
+One handful of dream-dust
+
+Not for sale.}\\
 
 \ \
 
 \normalsize
-{AUTHOR OF QUOTE GOES HERE}  
+
+{- Langston Hughes}  
+
+{\em Dream Dust}
+
+% Oh God of dust and rainbows, help us see. That without dust the rainbow would not be - Langston Hughes
 \end{flushright}
 
 
