--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -231,22 +231,24 @@
 %%---------------------------------------------------------
 
 %% Do the title page: Personal info for title page
-\university{University College London}
-\faculty{Faculty of Mathematics and Physical Sciences}
+\university{\huge University College London}
+\faculty{\Large Faculty of Mathematics and Physical Sciences}
 \department{Department of Physics \& Astronomy}  
-\thesistitle{Supernova dust masses from line profile models: \\ A new diagnostic}
-\thesisauthor{Antonia Bevan}
-\dedication{\it{DEDICATION}} 
-\supervisorone{Mike Barlow}
-\examinerone{MAIN EXAMINERS NAME}
-\supervisortwo{Jeremy Yates}
-\examinertwo{SECOND EXAMINERS NAME}
+
+\thesistitle{\vspace{1cm} Core-collapse supernova \\ dust masses from \\ line profile models}
+\thesisauthor{\LARGE ANTONIA BEVAN \vspace{1cm}}
+%\dedication{\it{DEDICATION}} 
+\supervisorone{Prof. Michael J. Barlow}
+\examinerone{Prof. Examiner 1}
+\supervisortwo{Dr Jeremy A. Yates}
+\examinertwo{Dr Examiner 2}
 
 \maketitle 
 
+
 %% Declaration - REQUIRES SIGNING
 \include{front/declaration}
-\clearemptydoublepage
+%\clearemptydoublepage
 
 %% Abstract
 \include{front/abstract}
@@ -256,7 +258,7 @@
 
 %% Front quote
 \include{front/frontquote}
-\clearemptydoublepage
+%\clearemptydoublepage
 
 
 %% Contents pages
