chapter 2 - proof-read, reviewed and referenced for corrections from M&J

--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -31,6 +31,8 @@ HST - Hubble Space Telescope
 
 (MC)MC - (Markov Chain) Monte Carlo
 
+MSE - Mean Squared Error
+
 (M/N)IR - (Mid/Near) Infra-Red 
 
 ISM - Inter-Stellar Medium
