--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -239,7 +239,7 @@
 \thesisauthor{\LARGE ANTONIA BEVAN \vspace{1cm}}
 %\dedication{\it{DEDICATION}} 
 \supervisorone{Prof. Michael J. Barlow}
-\examinerone{Dr Kenny Wood}
+\examinerone{Dr Kenneth Wood}
 \supervisortwo{Dr Jeremy A. Yates}
 \examinertwo{Prof. Ian D. Howarth}
 
