--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -234,8 +234,7 @@
 \university{\huge University College London}
 \faculty{\Large Faculty of Mathematics and Physical Sciences}
 \department{Department of Physics \& Astronomy}  
-
-\thesistitle{\vspace{1cm} Core-collapse supernova \\ dust masses from \\ line profile models}
+\thesistitle{\vspace{1cm} Dust-Affected Models of Characteristic Line Emission in Supernovae}
 \thesisauthor{\LARGE ANTONIA BEVAN \vspace{1cm}}
 %\dedication{\it{DEDICATION}} 
 \supervisorone{Prof. Michael J. Barlow}
