updates to ch3.  Just need proofreading.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -8,9 +8,9 @@
 
 %% Set up the document class (hacked report)
 %% One sided
-%\documentclass[11pt, a4paper, oneside, openright, fleqn]{thesis}
+\documentclass[11pt, a4paper, oneside, openright, fleqn]{thesis}
 %% Two sided
-\documentclass[11pt, a4paper, twoside, openright, fleqn]{thesis}
+%\documentclass[11pt, a4paper, twoside, openright, fleqn]{thesis}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Package loading stuff
@@ -283,19 +283,19 @@
 
 
 \include{chapters/chapter1/chapter1}
-\clearthesisemptydoublepage
+%\clearthesisemptydoublepage
 \include{chapters/chapter2/chapter2}
 %\clearthesisemptydoublepage
 %\include{chapters/chapter3/chapter3}
-\clearthesisemptydoublepage
+%\clearthesisemptydoublepage
 \include{chapters/chapter4/chapter4}
-\clearthesisemptydoublepage
+%\clearthesisemptydoublepage
 \include{chapters/chapter5/chapter5}
-\clearthesisemptydoublepage
+%\clearthesisemptydoublepage
 \include{chapters/chapter6/chapter6}
-\clearthesisemptydoublepage
+%\clearthesisemptydoublepage
 \include{chapters/chapter7/chapter7}
-\clearthesisemptydoublepage
+%\clearthesisemptydoublepage
 %\include{chapters/chapter8/chapter8}
 %\clearthesisemptydoublepage
 
