updates to intro to ch4 and additional mse plots

--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -29,6 +29,8 @@ CTIO - Cerro Tololo Inter-American Observatory
 
 HST - Hubble Space Telescope
 
+LMC - Large Magellanic Cloud
+
 (MC)MC - (Markov Chain) Monte Carlo
 
 MSE - Mean Squared Error
