udpates to intro to ch4

--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -27,6 +27,8 @@ API - Application Program Interface
 
 CTIO - Cerro Tololo Inter-American Observatory
 
+ER - Equatorial Ring
+
 HST - Hubble Space Telescope
 
 LMC - Large Magellanic Cloud
