--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -29,7 +29,13 @@ CTIO - Cerro Tololo Inter-American Observatory
 
 ER - Equatorial Ring
 
+FWHM - Full-Width Half Maximum
+
 HST - Hubble Space Telescope
+
+HWZI - Half-Width Zero Intensity
+
+ISM - Inter-Stellar Medium
 
 LMC - Large Magellanic Cloud
 
@@ -38,8 +44,6 @@ LMC - Large Magellanic Cloud
 MSE - Mean Squared Error
 
 (M/N)IR - (Mid/Near) Infra-Red 
-
-ISM - Inter-Stellar Medium
 
 SED - Spectral Energy Distribution
 
