ch4 proofread - draft 1

--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -25,6 +25,8 @@ AAT - Anglo-Australian Telescope
 
 API - Application Program Interface
 
+ALMA - Atacama Large Millimetre Array
+
 CTIO - Cerro Tololo Inter-American Observatory
 
 ER - Equatorial Ring
