--- a/thesis/back/backquote.tex
+++ b/thesis/back/backquote.tex
@@ -2,13 +2,15 @@
 \vspace*{\fill}
 
 \begin{flushright}
-\large {\em ``YOUR QUOTE GOES HERE''} 
+\large {\em ``Cumulus clouds in the summer afternoon sky present a striking contrast of white against a bright blue sky.  During a sudden thundershower the primary and secondary rainbows display their multicolored arches.  Other colors in nature are the dark green of forest foliage and the red and orange hues of the Grand Canyon in early morning.  High in the mountains or on the desert when the air is clean one can clearly see dark patches in the bright band of the Milky Way.  Chimney smut turns all it touches to dirty blackness, and iridescent opal shimmers with a variety of colours''} 
 \\
 
 \ \
 
 \normalsize
-{AUTHOR OF QUOTE}
+{- Craig F. Bohren and Donald C. Huffman
+
+{\em Absorption and Scattering of Light by Small Particles}}
 \end{flushright}
 
 
