--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -23,13 +23,21 @@
 
 AAT - Anglo-Australian Telescope
 
-API - Application Program Interface
+AGB - Asymptotic Giant Branch
 
 ALMA - Atacama Large Millimetre Array
+
+API - Application Program Interface
+
+CCSN(e) - Core-Collapse Supernova(e)
+
+CDE - Continuous Distribution of Ellipsoids
 
 CTIO - Cerro Tololo Inter-American Observatory
 
 ER - Equatorial Ring
+
+ESO - European Southern Observatory
 
 FWHM - Full-Width Half Maximum
 
@@ -37,19 +45,31 @@ HST - Hubble Space Telescope
 
 HWZI - Half-Width Zero Intensity
 
+IR - Infra-Red
+
 ISM - Inter-Stellar Medium
 
 LMC - Large Magellanic Cloud
 
-(MC)MC - (Markov Chain) Monte Carlo
+MC - Monte Carlo
+
+MCMC - Markov Chain Monte Carlo
+
+MIR - Mid Infra-Red 
+
+MRN - The \citet*{Mathis1977} grain distribution
 
 MSE - Mean Squared Error
 
-(M/N)IR - (Mid/Near) Infra-Red 
+NASA - National Aeronautics and Space Administration
+
+NIR - Near Infra-Red
+
+QSO - Quasi-Stellar Object (Quasar)
 
 SED - Spectral Energy Distribution
 
-(CC)SN(e) - (Core-Collapse) Supernova(e)
+SN(e) - Supernova(e)
 
 UV - Ultra-Violet
 
