--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -231,12 +231,12 @@
 %%---------------------------------------------------------
 
 %% Do the title page: Personal info for title page
-\university{\huge University College London}
+\university{\vspace{1cm}\huge University College London}
 \faculty{\Large Faculty of Mathematics and Physical Sciences}
 \department{Department of Physics \& Astronomy}  
-\thesistitle{\vspace{1cm} Dust-Affected Models of Characteristic Line Emission in Supernovae}
-\thesisauthor{\LARGE ANTONIA BEVAN \vspace{1cm}}
-%\dedication{\it{DEDICATION}} 
+\thesistitle{\vspace{0.8cm} Dust-Affected Models of Characteristic Line Emission in Supernovae}
+\thesisauthor{\LARGE ANTONIA BEVAN \vspace{0.8cm}}
+\dedication{\it{In loving memory of Molly and Bill Siddle.}} 
 \supervisorone{Prof. Michael J. Barlow}
 \examinerone{Dr Kenneth Wood}
 \supervisortwo{Dr Jeremy A. Yates}
@@ -244,6 +244,7 @@
 
 \maketitle 
 
+%\include{front/dedication}
 
 %% Declaration - REQUIRES SIGNING
 \include{front/declaration}
