--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,32 @@
+@ARTICLE{Draine2004,
+   author = {{Draine}, B.~T. and {Flatau}, P.~J.},
+    title = "{User Guide for the Discrete Dipole Approximation Code DDSCAT 6.1}",
+  journal = {ArXiv Astrophysics e-prints},
+   eprint = {astro-ph/0409262},
+ keywords = {Astrophysics},
+     year = 2004,
+    month = sep,
+   adsurl = {http://adsabs.harvard.edu/abs/2004astro.ph..9262D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@book{Mishchenko2002,
+  title={Scattering, Absorption, and Emission of Light by Small Particles},
+  author={Mishchenko, M.I. and Travis, L.D. and Lacis, A.A.},
+  isbn={9780521782524},
+  year={2002},
+  publisher={Cambridge University Press}
+}
+
+@book{Riley2006,
+  title={Mathematical Methods for Physics and Engineering: A Comprehensive Guide},
+  author={Riley, K.F. and Hobson, M.P. and Bence, S.J.},
+  isbn={9781139450997},
+  year={2006},
+  publisher={Cambridge University Press}
+}
+
 @ARTICLE{Mie1908,
    author = {{Mie}, G.},
   journal = {Annalen der Physik},
