--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -111,7 +111,7 @@
 %ANTONIA PACKAGES
 \usepackage{booktabs}
 
-
+\usepackage{bm}
 % Load in the hacked caption stuff
 \usepackage{hackcaption}
 
@@ -305,7 +305,7 @@
 %%---------------------------------------------------------
 
 %% Appendices
-%\include{back/appendices/appendA}
+\include{back/appendices/appendA}
 %\clearthesisemptydoublepage
 %\include{back/appendices/appendB}
 %\clearthesisemptydoublepage
