ch1 and some corrections to ch 4

--- a/thesis/back/backquote.tex
+++ b/thesis/back/backquote.tex
@@ -1,9 +1,13 @@
 \thispagestyle{empty}
-\vspace*{\fill}
+%\vspace*{10cm}
 
+%\begin{flushright}
+\begin{figure*}[!b]
 \begin{flushright}
-
-\large{\em ``Every atom in your body came from a star that exploded. And, the atoms in your left hand probably came from a different star than your right hand. It really is the most poetic thing I know about physics: You are all stardust. You couldn't be here if stars hadn't exploded, because the elements - the carbon, nitrogen, oxygen, iron, all the things that matter for evolution and for life - weren't created at the beginning of time. They were created in the nuclear furnaces of stars, and the only way for them to get into your body is if those stars were kind enough to explode. [...] The stars died so that you could be here today."}
+\includegraphics[scale=0.42]{back/snoopy2.jpg}
+\end{flushright}
+\end{figure*}
+%\large{\em ``Every atom in your body came from a star that exploded. And, the atoms in your left hand probably came from a different star than your right hand. It really is the most poetic thing I know about physics: You are all stardust. You couldn't be here if stars hadn't exploded, because the elements - the carbon, nitrogen, oxygen, iron, all the things that matter for evolution and for life - weren't created at the beginning of time. They were created in the nuclear furnaces of stars, and the only way for them to get into your body is if those stars were kind enough to explode. [...] The stars died so that you could be here today."}
 
 
 %\large {\em Dust if you must, but wouldn't it be better
@@ -47,11 +51,11 @@
 \ \
 
 \normalsize
-{- Lawrence M. Krauss}
+%{- Lawrence M. Krauss}
 %%{- Craig F. Bohren and Donald C. Huffman
 %{- Rose Milligan}
 %{\em Absorption and Scattering of Light by Small Particles}}
-\end{flushright}
+%\end{flushright}
 
 
 
