--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,127 @@
+@ARTICLE{Barlow1977,
+   author = {{Barlow}, M.~J. and {Silk}, J.},
+    title = "{Sputtering in interstellar shocks - A model for heavy element depletion}",
+  journal = {\apjl},
+ keywords = {Absorption, Heavy Elements, Interstellar Matter, Shock Wave Propagation, Sputtering, Supernova Remnants, Abundance, Granular Materials, Propagation Velocity, Shock Fronts},
+     year = 1977,
+    month = jan,
+   volume = 211,
+    pages = {L83-L87},
+      doi = {10.1086/182346},
+   adsurl = {http://adsabs.harvard.edu/abs/1977ApJ...211L..83B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{Gomez2013,
+   author = {{Gomez}, H.},
+    title = {Dust in supernova remnants},
+booktitle = {Proceedings of The Life Cycle of Dust in the Universe: Observations, Theory, and Laboratory Experiments},
+editor ={ Anja Andersen and Maarten Baes and Haley Gomez and Ciska Kemper and  Darach Watson },
+     year = 2013,
+    pages = {146},
+   adsurl = {http://adsabs.harvard.edu/abs/2013lcdu.confE.146G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Krause2008,
+   author = {{Krause}, O. and {Birkmann}, S.~M. and {Usuda}, T. and {Hattori}, T. and 
+	{Goto}, M. and {Rieke}, G.~H. and {Misselt}, K.~A.},
+    title = "{The Cassiopeia A Supernova Was of Type IIb}",
+  journal = {Science},
+archivePrefix = "arXiv",
+   eprint = {0805.4557},
+     year = 2008,
+    month = may,
+   volume = 320,
+    pages = {1195-},
+      doi = {10.1126/science.1155788},
+   adsurl = {http://adsabs.harvard.edu/abs/2008Sci...320.1195K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Sugerman2005,
+   author = {{Sugerman}, B.~E.~K. and {Crotts}, A.~P.~S. and {Kunkel}, W.~E. and 
+	{Heathcote}, S.~R. and {Lawrence}, S.~S.},
+    title = "{The Three-dimensional Circumstellar Environment of SN 1987A}",
+  journal = {\apjs},
+   eprint = {astro-ph/0502378},
+ keywords = {Stars: Circumstellar Matter, ISM: Dust, Extinction, Galaxies: Magellanic Clouds, Scattering, Stars: Mass Loss, Stars: Supernovae: Individual: Alphanumeric: SN 1987A},
+     year = 2005,
+    month = jul,
+   volume = 159,
+    pages = {60-99},
+      doi = {10.1086/430408},
+   adsurl = {http://adsabs.harvard.edu/abs/2005ApJS..159...60S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Draine2003,
+   author = {{Draine}, B.~T.},
+    title = "{Interstellar Dust Grains}",
+  journal = {\araa},
+   eprint = {astro-ph/0304489},
+     year = 2003,
+   volume = 41,
+    pages = {241-289},
+      doi = {10.1146/annurev.astro.41.011802.094840},
+   adsurl = {http://adsabs.harvard.edu/abs/2003ARA%26A..41..241D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Hildebrand1983,
+   author = {{Hildebrand}, R.~H.},
+    title = "{The Determination of Cloud Masses and Dust Characteristics from Submillimetre Thermal Emission}",
+  journal = {Quarterly Journal of the Royal Astronomical Society},
+     year = 1983,
+    month = sep,
+   volume = 24,
+    pages = {267},
+   adsurl = {http://adsabs.harvard.edu/abs/1983QJRAS..24..267H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Rieke1985,
+   author = {{Rieke}, G.~H. and {Lebofsky}, M.~J.},
+    title = "{The interstellar extinction law from 1 to 13 microns}",
+  journal = {\apj},
+ keywords = {Galactic Nuclei, Infrared Astronomy, Interstellar Extinction, Interstellar Matter, Molecular Clouds},
+     year = 1985,
+    month = jan,
+   volume = 288,
+    pages = {618-621},
+      doi = {10.1086/162827},
+   adsurl = {http://adsabs.harvard.edu/abs/1985ApJ...288..618R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bless1972,
+   author = {{Bless}, R.~C. and {Savage}, B.~D.},
+    title = "{Ultraviolet Photometry from the Orbiting Astronomical Observatory. II. Interstellar Extinction}",
+  journal = {\apj},
+     year = 1972,
+    month = feb,
+   volume = 171,
+    pages = {293},
+      doi = {10.1086/151282},
+   adsurl = {http://adsabs.harvard.edu/abs/1972ApJ...171..293B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Cardelli1989,
+   author = {{Cardelli}, J.~A. and {Clayton}, G.~C. and {Mathis}, J.~S.},
+    title = "{The relationship between infrared, optical, and ultraviolet extinction}",
+  journal = {\apj},
+ keywords = {Infrared Spectra, Interstellar Extinction, Ultraviolet Spectra, Visible Spectrum, Computational Astrophysics, Interstellar Matter, Iue},
+     year = 1989,
+    month = oct,
+   volume = 345,
+    pages = {245-256},
+      doi = {10.1086/167900},
+   adsurl = {http://adsabs.harvard.edu/abs/1989ApJ...345..245C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Draine2004,
    author = {{Draine}, B.~T. and {Flatau}, P.~J.},
     title = "{User Guide for the Discrete Dipole Approximation Code DDSCAT 6.1}",
